--- a/src/main/resources/templates/Header_d.html
+++ b/src/main/resources/templates/Header_d.html
@@ -43,23 +43,6 @@
 				<!-- 왼쪽정렬 메뉴 -->
 
 				<div class="col-lg-8 mt-2 text-white">
-					<div class="float-end mx-1 headerLink"
-						th:if="${session.userId != null}">
-						<div class="dropdown ">
-							<!-- <button > -->
-								<img src="/images/p.png" style="width: 80px;" class="btn dropdown-toggle" type="button"
-								id="dropdownMenuButton1" data-bs-toggle="dropdown"
-								aria-expanded="false">
-							<!-- </button> -->
-							<ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1"
-								style="background-color: gray;">
-								<li><a class="dropdown-item " href="/mypage"
-									style="color: white;">마이페이지</a></li>
-								<li><a class="dropdown-item" id="btn-logout"
-									style="color: white;">로그아웃 </a></li>
-							</ul>
-						</div>
-					</div>
 					<div class="float-end mx-1">
 						<a href="/watcat/kobis">
 							<button class="btn btn-outline-light">
@@ -103,6 +86,33 @@
 							</button>
 						</a>
 					</div>
+
+
+					<div class="dropdown float-end mx-1"  >
+						<button class="btn dropdown-toggle" type="button"
+							id="dropdownMenuButton1" data-bs-toggle="dropdown"
+							aria-expanded="false"><img src="/images/p.png" style="width:50px;"></button>
+						<ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1" style="background-color:gray;">
+							<li><a class="dropdown-item" href="#" style="color:white;">마이페이지</a></li>
+							<li><a class="dropdown-item" href="#" style="color:white;">로그아웃</a></li>
+						</ul>
+					</div>
+
+
+
+					<div class="float-end mx-1" th:if="${session.userId != null}">
+						<a href="/mypage" class="headerLink">
+							<button class="btn btn-outline-light">
+								<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+									fill="currentColor" class="bi bi-bag-heart-fill"
+									viewBox="0 0 16 16">
+								<path
+										d="M11.5 4v-.5a3.5 3.5 0 1 0-7 0V4H1v10a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V4h-3.5ZM8 1a2.5 2.5 0 0 1 2.5 2.5V4h-5v-.5A2.5 2.5 0 0 1 8 1Zm0 6.993c1.664-1.711 5.825 1.283 0 5.132-5.825-3.85-1.664-6.843 0-5.132Z" />
+								</svg>
+								MyPage
+							</button>
+						</a>
+					</div>
 					<div th:if="${session.userId == null}" class="float-end mx-1">
 						<a href="/login" class="headerLink">
 							<button class="btn btn-outline-light">
@@ -116,51 +126,56 @@
 							</button>
 						</a>
 					</div>
-				</div>
-				
-				<div>
-					<!-- 로그아웃 ajax -->
-					<input type="hidden" id="userId" th:value="${session.userId}">
-					<input type="hidden" id="adminPermission"
-						th:value="${session.adminPermission}">
-					<script
-						src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+					<div th:if="${session.userId != null}" class="float-end mx-1">
+						<span th:text="${session.userId}+' 님'"></span> <a href="#"
+							class="headerLink">
+							<button id="btn-logout" class="btn btn-outline-light">
+								<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+									fill="currentColor" class="bi bi-door-open-fill"
+									viewBox="0 0 16 16">
+								<path
+										d="M1.5 15a.5.5 0 0 0 0 1h13a.5.5 0 0 0 0-1H13V2.5A1.5 1.5 0 0 0 11.5 1H11V.5a.5.5 0 0 0-.57-.495l-7 1A.5.5 0 0 0 3 1.5V15H1.5zM11 2h.5a.5.5 0 0 1 .5.5V15h-1V2zm-2.5 8c-.276 0-.5-.448-.5-1s.224-1 .5-1 .5.448.5 1-.224 1-.5 1z" />
+								</svg>
+								로그아웃
+							</button>
+						</a>
 
-					<script>
-						$("#btn-logout")
-								.on(
-										"click",
-										function() {
+						<!-- 로그아웃 ajax -->
+						<input type="hidden" id="userId" th:value="${session.userId}">
+						<input type="hidden" id="adminPermission"
+							th:value="${session.adminPermission}">
+						<script
+							src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
-											$
-													.ajax({
-														url : "/login",
-														type : "delete",
-														success : function(data) {
+						<script>
+							$("#btn-logout").on(
+									"click",
+									function() {
 
-															console
-																	.log("로그아웃됨");
-															location.href = "/";
+										$.ajax({
+											url : "/login",
+											type : "delete",
+											success : function(data) {
 
-														},
-														error : function(
-																request,
-																status, error) {
+												console.log("로그아웃됨");
+												location.href = "/";
 
-															console
-																	.log("code:"
-																			+ request.status
-																			+ "\n"
-																			+ "message:"
-																			+ request.responseText
-																			+ "\n"
-																			+ "error:"
-																			+ error);
-														}
-													})
-										});
-					</script>
+											},
+											error : function(request, status,
+													error) {
 
+												console.log("code:"
+														+ request.status + "\n"
+														+ "message:"
+														+ request.responseText
+														+ "\n" + "error:"
+														+ error);
+											}
+										})
+									});
+						</script>
+
+					</div>
 				</div>
 			</div>
 		</div>
