--- a/src/main/resources/templates/MyPage/MypageWishlist.html
+++ b/src/main/resources/templates/MyPage/MypageWishlist.html
@@ -17,7 +17,44 @@
 <script>
 
 
+$(document).ready(()=>{
+	
+	
+	let movieId = $("#movieId").val();
+	let apiUrl = "https://api.themoviedb.org/3/movie/";
+	let apiKey = "?api_key=a1c25fa7fbd7117d8d4d73bf1892deae";
+	let language = "&language=ko&append_to_response=credits";
+	let userId = $("#userId").val();// session에 저장된 userId
+	apiUrl += movieId; 
+	apiUrl += apiKey;
+	apiUrl += language;
+	// 영화 상세정보 get
+	$.ajax({
+		type:"GET",
+		url:apiUrl,
+		success:(response)=>{
+			// 이미지
+			let imageUrl ="https://image.tmdb.org/t/p/original";
+			// 포스터 이미지
+			let poster ="";
+			let posterPath = response.poster_path;
+			if(isEmpty(posterPath)){
+				poster = "../images/noimage.png";
+			} else {
+				poster = imageUrl + posterPath;
+			}
+			// 백드랍 이미지
+			let backdropPath= response.backdrop_path;
+			let backdrop = imageUrl + backdropPath;
+			
+			let title = response.title;
 
+		},
+		error:()=>{
+			alert("get movie details 실패");
+		}
+	});
+})
 
 </script>
 </head>
