--- a/bin/main/static/css/movieRec.css
+++ b/bin/main/static/css/movieRec.css
@@ -173,6 +173,17 @@ star-input>.input.focus{
 	margin: 3px;
 }
 .custom-pagination.pagination .page-link{
-	background: gray;
-	border-color: gray;
+	background: rgb(31,32,35);
+	border-color: rgb(31,32,35);
+}
+
+.custom-pagination.pagination a:hover {
+	color: rgb(182, 0, 55);
+}
+
+.custom-pagination.pagination > .active > a, 
+.custom-pagination.pagination > .active > a:hover, 
+.custom-pagination.pagination > .active > a:focus {
+  background: rgb(182, 0, 55);;
+  border-color: rgb(182, 0, 55);;
 }
