--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -29,3 +29,22 @@ a:link{color:rgb(255, 255, 255)}
 	color: black;
 }
 
+/* pagination customizing */
+.custom-pagination.pagination .page-item {
+	margin: 3px;
+}
+.custom-pagination.pagination .page-link{
+	background: rgb(31,32,35);
+	border-color: rgb(31,32,35);
+}
+
+.custom-pagination.pagination a:hover {
+	color: rgb(182, 0, 55);
+}
+
+.custom-pagination.pagination > .active > a, 
+.custom-pagination.pagination > .active > a:hover, 
+.custom-pagination.pagination > .active > a:focus {
+  background: rgb(182, 0, 55);;
+  border-color: rgb(182, 0, 55);;
+}
